# js2rust

./: .gitignore  BUG_TODO_REPORT.md  Cargo.toml  DESIGN_NEW_TYPE_SYSTEM.md  INTEGRATION.md  INTEGRATION_BUILDRS_SIMPLE.md  LICENSE-APACHE  LICENSE-MIT  PHASE5_PLAN.md  README.md  README_EN.md  ROADMAP.md  SYNTAX_IMPLEMENTATION.md  TEST_PLAN.md  TYPE_INFERENCE_REDESIGN.md  UNIFY_CODEGEN_PLAN.md  host_config.json  scrape_log.txt  scrape_v3_log.txt  test_time.zig  test_type.zig  类型设计方案.md
.cargo/: config.toml
.temp/: build_errors.txt  builtins_diff.txt  cargo_clippy.txt  cargo_test.txt  clippy_out.txt  closure_diff.txt  commit_gap6_12.txt  commit_gap8_10_15.txt  commit_msg.txt  commit_msg2.txt  commit_msg_p1a.txt  commit_msg_p1b.txt  commit_msg_p1c.txt  commit_msg_p1f.txt  commit_msg_p1g.txt  debug_arrow.rs  dual_track_full.txt  dual_track_output.txt  dual_track_results.txt  emitter_failure_categories.md  full_test.txt  is_rest_errors.txt  test-output.txt  test-output2.txt  test-regex.txt  test-rust.txt  test-rust2.txt  test3.txt  test4.txt  test5.txt  test_out.txt  test_out2.txt  test_output.txt  test_output2.txt  test_output3.txt  test_rust_str.rs  test_rust_str2.rs  test_rust_str3.rs  test_simple.rs  test_simple2.rs  (+4 more)
docs/: CODEGEN_BUGS.md  JS_FEATURE_EVALUATION.md  JS_ROADMAP.md  TESTING.md  ZERO_COPY_IMPLEMENTATION.md
docs-archive/: JS_FEATURE_EVALUATION_HISTORY.md  JS_FEATURE_EVALUATION_VERIFICATION.md  JS_ROADMAP.md
examples/: math_advanced.js
examples/showcase-phase5/: Cargo.toml
examples/showcase-phase5/js_src/: phase5.js
examples/showcase-phase5/src/: main.rs
examples/showcase-project/: Cargo.toml  build.rs  js2rust.toml
examples/showcase-project/js_src/: app.js  for_in_struct.js  helpers.js  phase5.js  phase6.js  phase_memory.js  test_advanced_types.js  test_arguments.js  test_builtins_advanced.js  test_builtins_coverage.js  test_builtins_es2023.js  test_classes.js  test_control_flow.js  test_date_setters.js  test_delete_operator.js  test_dynamic_index.js  test_expr_advanced.js  test_for_in_map.js  test_for_of_collections.js  test_in_operator.js  test_jsdoc_types.js  test_logical_assign.js  test_missing_coverage.js  test_nullish_ops.js  test_operators.js  test_optional.js  test_private_fields.js  test_regexp.js  test_static_fields.js  test_stmt_advanced.js  test_string_methods.js  test_symbol.js  test_throw.js  utils.js
examples/showcase-project/js_src_pending/: test_arguments.js  test_builtins_es2023.js  test_date_setters.js  test_extends.js  test_in_operator.js  test_string_methods.js  test_symbol.js
examples/showcase-project/src/: main.rs
examples/test-bin-project/: Cargo.toml  build.rs  js2rust.toml
examples/test-bin-project/js_src/: main.js  test_date_simple.js  test_date_timezone.js  test_promise.js  test_try_catch_nesting.js  test_typeof.js
examples/test-bin-project/src/: host.rs  main.rs
examples/test-bin-project/tests/: integration_test.rs
examples/test-project/: Cargo.toml  build.rs
in/: async_ops.js  bitwise_ops.js  builtins_array.js  builtins_console.js  builtins_tier2.js  classes.js  closures.js  destructure.js  exceptions.js  host_call.js  loops.js  main.js  math.js  objects.js  runtime_test.js  strings.js  test_builtins_array.js  test_builtins_math.js  test_builtins_string.js  test_cabi.js  test_call_site.js  test_classes_adv.js  test_closures.js  test_control_flow.js  test_expressions.js  test_foreach.js  test_map_set.js  test_template.js  test_types.js  utils.js  数学运算.js
js2rust-bridge/: Cargo.toml  build.rs
js2rust-bridge-macro/: Cargo.toml
js2rust-bridge-macro/src/: host_fn.rs  lib.rs
js2rust-bridge/src/: config.rs  host.rs  lib.rs  native_icu.rs  native_regex.rs  sdk.rs
js2rustc/: Cargo.toml
js2rustc/benches/: pipeline.rs
js2rustc/src/: analyzer.rs  builtins.rs  codegen.rs  host.rs  infer.rs  lib.rs  main.rs  parser.rs  preprocess.rs  project.rs  testgen.rs
js2rustc/src/codegen/: builtins.rs  closure.rs  expr.rs  fn_decl.rs  mod.rs  stmt.rs
js2rustc/tests/: pipeline_tests.rs
js2zig-build/: Cargo.toml
js2zig-build/src/: lib.rs
js2zig-core/: Cargo.toml
js2zig-core/.temp/: builtins_header.txt
js2zig-core/src/: analyzer.rs  builtins.rs  cabi.rs  host.rs  infer.rs  jsdoc.rs  lib.rs  native_builtins.rs  native_proto.rs  parser.rs  pipeline.rs  project.rs  sourcemap.rs  testgen.rs  tests.rs  toml_config.rs  types.rs
js2zig-core/src/codegen/: builtins.rs  class.rs  closure.rs  closures.rs  expr.rs  fn_decl.rs  helpers.rs  mod.rs  stmt.rs  tables.rs
js2zig-core/src/infer/: ast_walk.rs  expr.rs  fn_types.rs  helpers.rs  mod.rs  passes.rs
js2zig-core/src/native_proto/: builtins.rs  codegen.rs  infer.rs  jsdoc.rs  mod.rs  tests.rs
js2zig-core/src/native_proto/codegen/: expr.rs  helpers.rs  mod.rs  stmt.rs
js2zig-core/src/native_proto/infer/: expr.rs  fn_types.rs  helpers.rs  mod.rs  passes.rs
js2zig-core/src/tests/: advanced_builtins.rs  basic.rs  builtins_basic.rs  collision.rs  common.rs  destructure_class_arrays.rs  dual_track.rs  mod.rs  not_implemented_and_fixes.rs  objects_and_types.rs  phase1.rs  shadowing_chaining_array.rs  try_catch_and_closures.rs
js2zig-core/src/zigir/: builtins.rs  ident.rs  kinds.rs  mod.rs  ops.rs  source_span.rs  types.rs
js2zig-core/src/zigir/emit/: builtins.rs  expr.rs  helpers.rs  mod.rs  stmt.rs
js2zig-core/src/zigir/emit/builtins/: array_callback.rs  array_method.rs  collections.rs  math.rs  mod.rs  object.rs  regexp.rs  string.rs
js2zig-core/src/zigir/emit/expr/: binary.rs  call_member.rs  container.rs  mod.rs  template_new.rs
js2zig-core/src/zigir/emit/stmt/: control_flow.rs  decl.rs  destructure_assign.rs  mod.rs
js2zig-core/src/zigir/lower/: cabi.rs  class.rs  closure.rs  decl.rs  expr.rs  helpers.rs  mod.rs  stmt.rs
js2zig-core/src/zigir/lower/expr/: call.rs  container.rs  function.rs  idents.rs  member.rs  mod.rs  operators.rs  optional.rs
js2zig-core/src/zigir/passes/: collect_idents.rs  constant_fold.rs  dead_code.rs  mod.rs  validate.rs  walk.rs
runtime/: js_allocator.zig  js_array.zig  js_bigint.zig  js_collections.zig  js_date.zig  (+21 more)
(+971 files in other folders)
