[package]
name = "js2rust-bridge-macro"
version = "0.1.0"
edition = "2021"
description = "Proc-macro for generating Rust FFI bindings from js2rust C ABI export metadata"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
