[package]
name = "js2rust-bridge"
version = "0.12.0"
edition = "2024"
authors = ["jonathan197608"]
description = "FFI bridge runtime for js2rust-generated Zig code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonathan197608/js2rust"
keywords = ["ffi", "zig", "js", "bindings"]
categories = ["development-tools", "external-ffi-bindings"]

[dependencies]
js2rust-bridge-macro = { version = "0.12.0", path = "../js2rust-bridge-macro" }
js2zig-core = { version = "0.11.0", path = "../js2zig-core" }
fancy-regex = "0.15"

[features]
stub-allocator = []
