[package]
name = "js2rust-bridge"
version = "0.15.0"
edition = "2024"
authors = ["jonathan197608"]
description = "FFI bridge runtime for js2rust-generated Zig code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonathan197608/js2rust"
keywords = ["ffi", "zig", "js", "bindings"]
categories = ["development-tools", "external-ffi-bindings"]

[dependencies]
js2rust-bridge-macro = { version = "0.15.0", path = "../js2rust-bridge-macro" }
js2zig-core = { version = "0.15.0", path = "../js2zig-core" }
fancy-regex = { version = "0.18", optional = true }
icu_casemap = { version = "2", optional = true, features = ["compiled_data"] }
icu_normalizer = { version = "2", optional = true, features = ["compiled_data"] }
icu_collator = { version = "2", optional = true, features = ["compiled_data"] }
icu_locale_core = { version = "2", optional = true }
serde_json = "1"

[features]
default = []
stub-allocator = []
regex = ["fancy-regex"]
icu = ["icu_casemap", "icu_normalizer", "icu_collator", "icu_locale_core"]
