[package]
name = "js2rustc"
version = "0.1.0"
edition = "2024"

[dependencies]
oxc_parser = "0.135"
oxc_ast = "0.135"
oxc_allocator = "0.135"
oxc_span = "0.135"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false
