[package]
name = "js2zig-build"
version = "0.1.0"
edition = "2021"
authors = ["jonathan197608"]
description = "Build.rs helper for js2zig-core: transpile JS to Zig during Cargo build"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonathan197608/js2rust"
keywords = ["js", "zig", "transpiler", "build-dependency"]
categories = ["development-tools", "build-dependencies"]

# This crate is intended as a build-dependency:
# [build-dependencies]
# js2zig-build = "0.1"

[dependencies]
js2zig-core = { path = "../js2zig-core" }

[lib]
name = "js2zig_build"
path = "src/lib.rs"
