[package]
name = "js2zig-core"
version = "0.18.0"
edition = "2024"
authors = ["jonathan197608"]
description = "Core JS-to-Zig transpiler library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonathan197608/js2rust"
keywords = ["js", "zig", "transpiler", "javascript", "webassembly"]
categories = ["development-tools", "compilers"]

[dependencies]
oxc_parser = "0.139"
oxc_ast = "0.139"
oxc_allocator = "0.139"
oxc_span = "0.139"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
indexmap = { version = "2", features = ["serde"] }
