[package]
name = "test-bin-project"
version = "0.1.0"
edition = "2021"
authors = ["jonathan197608"]
description = "Test binary project for js2rust — JS-to-Zig transpiler"

[dependencies]
js2rust-bridge = { version = "0.5", path = "../../js2rust-bridge" }
js2rust-bridge-macro = { version = "0.5", path = "../../js2rust-bridge-macro" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
js2rust-bridge = { version = "0.5", path = "../../js2rust-bridge" }
